--- a/css/style.css
+++ b/css/style.css
@@ -51,8 +51,8 @@ article .activeTab {
 }
 
 .graph {
-    /*width: 99%;*/
-    /*height: 99%;*/
+    /*width: 100%;
+    height: 100%;*/
 }
 
 .menu-segment {
@@ -65,4 +65,19 @@ article .activeTab {
 
 .menu-icon {
     pointer-events: none;
+}
+
+
+.axis path,
+.axis line {
+    fill: none;
+    stroke: black;
+    stroke-width: 2px;
+    shape-rendering: crispEdges;
+}
+
+.line {
+    fill: none;
+    stroke: gray;
+    stroke-width: 5px;
 }
