--- a/css/style.css
+++ b/css/style.css
@@ -81,3 +81,23 @@ article .activeTab {
     stroke: gray;
     stroke-width: 5px;
 }
+
+.selectFeature {
+    display:block;
+    width:20%;
+    font-weight:500;
+    margin-left:10px;
+    line-height:40px;
+}
+
+#varDensityContinuous {
+    position: absolute;
+    left:74%;
+    top:7%;
+}
+
+#varDensityCategorical {
+    position: absolute;
+    left:74%;
+    top:63%;
+}
