--- a/css/style.css
+++ b/css/style.css
@@ -46,14 +46,14 @@ article .activeTab {
 
 svg {
     background-color: white;
-    opacity: 0.8;
+    /*opacity: 0.8;*/
     margin: 2em auto;
     transition: ease 0.5s;
     box-shadow: -2px 4px 10px 3px rgba(0,0,0,0.1);
 }
 
 svg:hover {
-    opacity: 1;
+    /*opacity: 1;*/
     box-shadow: -2px 4px 10px 3px rgba(0,0,0,0.3);
 }
 
