--- a/css/style.css
+++ b/css/style.css
@@ -73,8 +73,10 @@ article .activeTab {
     width: 100%;
     height: 30%;
     display: flex;
-    justify-content: flex-start;
-    align-items: flex-start;
+    justify-content: center;
+    /*justify-content: flex-start;*/
+    align-items: center;
+    /*align-items: flex-start;*/
     flex-wrap: wrap;
     align-content: center;
 }
