--- a/css/style.css
+++ b/css/style.css
@@ -52,7 +52,7 @@ article .activeTab {
 
 #graph-wave {
     width: 100%;
-    height: 50%;
+    height: 60%;
 }
 
 #options-wave {
@@ -148,9 +148,22 @@ line {
     stroke: #00ccff;
 }
 
+.pc .nanLine {
+    stroke-dasharray: 3, 3;
+    stroke-width: 1px;
+    stroke: black;
+    fill: none;
+}
+
 .pc .axis .title {
     font-size: 10px;
     transform: rotate(-21deg) translate(-5px, -6px);
+    fill: black;
+}
+
+.pc .nd {
+    font-size: 10px;
+    /*transform: rotate(90deg);*/
     fill: black;
 }
 
