--- a/css/style.css
+++ b/css/style.css
@@ -31,17 +31,10 @@ article .activeTab {
     background-color: gray;
 }
 
+/*WAVE*/
 #tab-wave {
     grid-template-columns: 80% auto;
     grid-template-rows: 90% auto;
-}
-
-#tab-person {
-    background-color: limegreen;
-}
-
-#tab-success {
-    background-color: deepskyblue;
 }
 
 #graph-container-wave {
@@ -85,11 +78,6 @@ article .activeTab {
     align-content: center;
 }
 
-.graph {
-    /*width: 99%;*/
-    /*height: 99%;*/
-}
-
 #list-col-wave ul {
     list-style-type: none;
     padding: 0 10px 0 10px;
@@ -117,6 +105,109 @@ article .activeTab {
     background-color: rgba(255, 179, 204, 0.3);
 }
 
+/*PERSON*/
+#tab-person {
+    background-color: limegreen;
+    grid-template-columns: 40% 30% auto;
+    grid-template-rows: 30% 30% auto;
+}
+
+#radar-person {
+    grid-column-start: 1;
+    grid-column-end: 2;
+    grid-row-start: 1;
+    grid-row-end: 3;
+    background-color: #5acd1d;
+}
+
+#bar-person {
+    grid-column-start: 1;
+    grid-column-end: 3;
+    grid-row-start: 3;
+    grid-row-end: 4;
+    background-color: #9ccd24;
+}
+
+#rep-person {
+    grid-column-start: 2;
+    grid-column-end: 3;
+    grid-row-start: 1;
+    grid-row-end: 3;
+    background-color: #7dcd58;
+}
+
+#feat1-person {
+    grid-column-start: 3;
+    grid-column-end: 4;
+    grid-row-start: 1;
+    grid-row-end: 2;
+    background-color: #93cd13;
+}
+
+#feat2-person {
+    grid-column-start: 3;
+    grid-column-end: 4;
+    grid-row-start: 2;
+    grid-row-end: 3;
+    background-color: #b8cd40;
+}
+
+#id-person {
+    grid-column-start: 3;
+    grid-column-end: 4;
+    grid-row-start: 3;
+    grid-row-end: 4;
+    background-color: #96cd85;
+}
+
+.plot-density {
+    display: grid;
+    grid-template-rows: 10% auto;
+}
+
+.select-density {
+    grid-row-start: 1;
+    grid-row-end: 2;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.graph-density {
+    grid-row-start: 2;
+    grid-row-end: 3;
+}
+
+/*SUCCESS*/
+#tab-success {
+    background-color: deepskyblue;
+    grid-template-columns: 70% auto;
+    grid-template-rows: 50% auto;
+}
+
+#sbc-success {
+    grid-column-start: 1;
+    grid-column-end: 2;
+    grid-row-start: 1;
+    grid-row-end: 3;
+    background-color: #3882cd;
+}
+
+#feat1-success {
+    grid-column-start: 2;
+    grid-column-end: 3;
+    grid-row-start: 1;
+    grid-row-end: 2;
+    background-color: #698bcd;
+}
+
+#feat2-success{
+    grid-column-start: 2;
+    grid-column-end: 3;
+    grid-row-start: 2;
+    grid-row-end: 3;
+    background-color: #4f2bcd;
+}
 /*---------------------- PARALLEL COORDINATES ----------------------*/
 .pc .background path {
     fill: none;
@@ -224,10 +315,10 @@ article .activeTab {
 /*}*/
 
 #menu {
-     position: absolute;
-     width: 25%;
-     height: 25%;
- }
+    position: absolute;
+    width: 25%;
+    height: 25%;
+}
 
 #menu-holder {
     position: absolute;
@@ -246,7 +337,6 @@ article .activeTab {
 .menu-icon {
     pointer-events: none;
 }
-
 
 /*---------------------- SSF ----------------------*/
 .ssf-cont .axis path,
@@ -292,36 +382,36 @@ article .activeTab {
 }
 
 .selectFeature {
-    display:block;
-    width:20%;
-    font-weight:500;
-    margin-left:10px;
-    line-height:40px;
+    display: block;
+    width: 20%;
+    font-weight: 500;
+    margin-left: 10px;
+    line-height: 40px;
 }
 
-#varDensityContinuous {
-    position: absolute;
-    left:74%;
-    top:7%;
-}
+/*#varDensityContinuous {*/
+/*position: absolute;*/
+/*left:74%;*/
+/*top:7%;*/
+/*}*/
 
-#varDensityCategorical {
-    position: absolute;
-    left:74%;
-    top:63%;
-}
+/*#varDensityCategorical {*/
+/*position: absolute;*/
+/*left:74%;*/
+/*top:63%;*/
+/*}*/
 
-#densityVarPerson1 {
-    position: absolute;
-    left:74%;
-    top:7%;
-}
+/*#densityVarPerson1 {*/
+/*position: absolute;*/
+/*left:74%;*/
+/*top:7%;*/
+/*}*/
 
-#densityVarPerson2 {
-    position: absolute;
-    left:74%;
-    top:27%;
-}
+/*#densityVarPerson2 {*/
+/*position: absolute;*/
+/*left:74%;*/
+/*top:27%;*/
+/*}*/
 
 h1 {
     text-align: center;
