--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,8 @@ body {
     width: 100vw;
     height: 100vh;
     margin: 0;
+    font-variant: small-caps;
+    font-family: sans-serif;
 }
 
 body > nav {
@@ -40,7 +42,7 @@ article .activeTab {
 /*WAVE*/
 #tab-wave {
     grid-template-columns: 40% 40% auto;
-    grid-template-rows: 5% 75% auto;
+    grid-template-rows: 5% 75% auto 5%;
     /*background-color: #66e0ff;*/
 }
 
@@ -76,7 +78,15 @@ article .activeTab {
     grid-column-end: 2;
     grid-row-start: 3;
     grid-row-end: 4;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     /*background-color: #34495e;*/
+}
+
+#options-wave-container {
+    width: 90%;
+    height: 100%;
 }
 
 #options-columns-wave {
@@ -92,6 +102,9 @@ article .activeTab {
     width: 100%;
     height: 5%;
     text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     /*border: 1px solid #ddd;*/
 }
 
@@ -149,11 +162,15 @@ article .activeTab {
     background-color: rgba(255, 179, 204, 0.3);
 }
 
+label > span {
+    padding-right: 5px;
+}
+
 /*PERSON*/
 #tab-person {
     background-color: white;
-    grid-template-columns: 40% 30% auto;
-    grid-template-rows: 5% 30% 30% auto;
+    grid-template-columns: 40% 30% 30%;
+    grid-template-rows: 5% 30% 30% 35%;
 }
 
 #select-person {
