--- a/css/style.css
+++ b/css/style.css
@@ -28,8 +28,6 @@ article .activeTab {
     display: grid;
 }
 
-
-
 /*---------------------- TABS ----------------------*/
 .title {
     padding: 5px;
@@ -134,6 +132,11 @@ article .activeTab {
     align-content: center;
 }
 
+#nb-wave {
+    right: 2%;
+    position: absolute;
+}
+
 #list-col-wave ul {
     list-style-type: none;
     padding: 0 10px 0 10px;
@@ -147,8 +150,7 @@ article .activeTab {
 }
 
 #list-col-wave li:nth-child(odd) {
-    background-color: #ffb3da;
-;
+    background-color: #ffb3da;;
 }
 
 #list-col-wave li:hover {
@@ -232,6 +234,11 @@ label > span {
     background-color: #96cd85;
 }
 
+#iid-person {
+    right: 2%;
+    position: absolute;
+}
+
 .plot-density {
     display: grid;
     grid-template-rows: 10% 90%;
@@ -278,74 +285,70 @@ label > span {
     flex-direction: column;
 }
 
-#sbc-success-interaction-div{
+#sbc-success-interaction-div {
     width: 100%;
     display: flex;
 }
 
-#sbc-success-info{
+#sbc-success-info {
     flex: 1;
     display: flex;
 }
 
-#sbc-success-interaction{
+#sbc-success-interaction {
     flex: 1;
 }
 
-#sbc-success-plot{
+#sbc-success-plot {
     width: 100%;
     flex: 1;
     display: flex;
 }
 
-#success_primary_feature_table{
+#success_primary_feature_table {
     margin: auto;
 }
 
-#button_get_iids{
+#button_get_iids {
     margin: auto;
 }
-
 
 th {
-  color:#D5DDE5;;
-  background:#1b1e24;
-  font-size:1.3em;
-  font-weight: 100;
-  padding:0.7em;
-  vertical-align:middle;
+    color: #D5DDE5;;
+    background: #1b1e24;
+    font-size: 1.3em;
+    font-weight: 100;
+    padding: 0.7em;
+    vertical-align: middle;
 }
 
 tr {
-  color:#666B85;
-  font-size:0.8em;
-  font-weight:normal;
+    color: #666B85;
+    font-size: 0.8em;
+    font-weight: normal;
 }
- 
+
 tr:hover td {
-  background:#5689cd;
-  color:#FFFFFF;
+    background: #5689cd;
+    color: #FFFFFF;
 }
- 
 
 tr:nth-child(odd) td {
-  background:#EBEBEB;
+    background: #EBEBEB;
 }
- 
+
 tr:nth-child(odd):hover td {
-  background:#5689cd;
+    background: #5689cd;
 }
- 
+
 td {
-  background:#FFFFFF;
-  padding:0.7em;
-  text-align:right;
-  vertical-align:middle;
-  font-weight:300;
-  font-size: 1.1em;
+    background: #FFFFFF;
+    padding: 0.7em;
+    text-align: right;
+    vertical-align: middle;
+    font-weight: 300;
+    font-size: 1.1em;
 }
-
-
 
 #feat1-success {
     grid-column-start: 2;
@@ -355,13 +358,14 @@ td {
     background-color: #698bcd;
 }
 
-#feat2-success{
+#feat2-success {
     grid-column-start: 2;
     grid-column-end: 3;
     grid-row-start: 3;
     grid-row-end: 4;
     background-color: #4f2bcd;
 }
+
 /*---------------------- PARALLEL COORDINATES ----------------------*/
 .pc .background path {
     fill: none;
