Changing success tab and interaction

--- a/css/style.css
+++ b/css/style.css
@@ -240,6 +240,7 @@ article .activeTab {
     grid-template-rows: 5% 50% auto;
 }
 
+
 #select-success {
     grid-column-start: 1;
     grid-column-end: 3;
@@ -249,6 +250,11 @@ article .activeTab {
     justify-content: center;
     align-items: center;
     background-color: darkblue;
+}
+
+#primary_feature_select{
+    margin-top: 1em;
+    padding: 0.2em;
 }
 
 #sbc-success {
@@ -261,22 +267,18 @@ article .activeTab {
     flex-direction: column;
 }
 
-#sbc-success-interaction-div{
-    width: 100%;
-    display: flex;
-}
-
-#sbc-success-info{
-    flex: 1;
-    display: flex;
-}
-
 #sbc-success-interaction{
-    flex: 1;
+    height: 1em;
+    margin: auto;
 }
 
 #sbc-success-plot{
     width: 100%;
+    flex: 1.4;
+    display: flex;
+}
+
+#sbc-success-info{
     flex: 1;
     display: flex;
 }
