--- a/css/style.css
+++ b/css/style.css
@@ -194,6 +194,12 @@ label > span {
     background-color: #5acd1d;
 }
 
+#radar-person-container {
+    width: 100%;
+    height: 0;
+    padding-bottom: 100%;
+}
+
 #bar-person {
     grid-column-start: 1;
     grid-column-end: 3;
