--- a/css/style.css
+++ b/css/style.css
@@ -39,7 +39,7 @@ article .activeTab {
 
 /*WAVE*/
 #tab-wave {
-    grid-template-columns: 40% 40% auto;
+    grid-template-columns: 50% 30% auto;
     grid-template-rows: 5% 75% auto 5%;
     /*background-color: #66e0ff;*/
 }
@@ -166,6 +166,26 @@ article .activeTab {
 
 label > span {
     padding-right: 5px;
+}
+
+#midLineTable tr {
+    color: #666B85;
+    font-size: 0.8em;
+    font-weight: normal;
+}
+
+#midLineTable tr:hover td {
+    background: #ffcce6;
+    color: #FFFFFF;
+}
+
+#midLineTable td {
+    background: #FFFFFF;
+    padding: 0.3em;
+    text-align: left;
+    vertical-align: middle;
+    font-weight: 300;
+    font-size: 1.1em;
 }
 
 /*PERSON*/
@@ -410,6 +430,10 @@ td {
     stroke: #00ccff;
 }
 
+.pc .highlighted {
+    stroke-width: 3px;
+}
+
 .pc .nanLine {
     stroke-dasharray: 3, 3;
     stroke-width: 1px;
@@ -428,13 +452,6 @@ td {
     /*transform: rotate(90deg);*/
     fill: black;
 }
-
-/*.pc .axis line,*/
-/*.pc .axis path {*/
-/*fill: none;*/
-/*stroke: #ccc;*/
-/*stroke-width: 1px;*/
-/*}*/
 
 .pc .axis .tick text {
     fill: black;
