--- a/css/style.css
+++ b/css/style.css
@@ -211,7 +211,7 @@ label > span {
     grid-column-end: 2;
     grid-row-start: 2;
     grid-row-end: 4;
-    background-color: #5acd1d;
+    /*background-color: #5acd1d;*/
 }
 
 #radar-person-container {
@@ -225,7 +225,7 @@ label > span {
     grid-column-end: 3;
     grid-row-start: 4;
     grid-row-end: 5;
-    background-color: #9ccd24;
+    /*background-color: #9ccd24;*/
 }
 
 #id-person {
@@ -233,7 +233,14 @@ label > span {
     grid-column-end: 3;
     grid-row-start: 2;
     grid-row-end: 4;
-    background-color: #7dcd58;
+}
+
+#identity-card-person {
+    background-color: #c2f0c2;
+    border: 3px solid seagreen;
+    margin-top: 20px;
+    margin-left: 20px;
+    margin-right: 20px;
 }
 
 #image-container {
@@ -246,6 +253,7 @@ label > span {
 
 #id-person ul {
     list-style: none;
+    font-family: "Courier New", serif;
 }
 
 #id-person li {
@@ -261,7 +269,7 @@ label > span {
     grid-column-end: 4;
     grid-row-start: 2;
     grid-row-end: 3;
-    background-color: #93cd13;
+    /*background-color: #93cd13;*/
 }
 
 #feat2-person {
@@ -269,7 +277,7 @@ label > span {
     grid-column-end: 4;
     grid-row-start: 3;
     grid-row-end: 4;
-    background-color: #b8cd40;
+    /*background-color: #b8cd40;*/
 }
 
 #cb-person {
@@ -277,7 +285,7 @@ label > span {
     grid-column-end: 4;
     grid-row-start: 4;
     grid-row-end: 5;
-    background-color: #96cd85;
+    /*background-color: #96cd85;*/
 }
 
 #iid-person {
@@ -305,7 +313,7 @@ label > span {
 
 /*SUCCESS*/
 #tab-success {
-    background-color: deepskyblue;
+    /*background-color: deepskyblue;*/
     grid-template-columns: 70% auto;
     grid-template-rows: 5% 50% auto;
 }
@@ -318,7 +326,8 @@ label > span {
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: darkblue;
+    background-color: #66ccff;
+    /*color: white;*/
 }
 
 #primary_feature_select {
@@ -331,7 +340,7 @@ label > span {
     grid-column-end: 2;
     grid-row-start: 2;
     grid-row-end: 4;
-    background-color: #3882cd;
+    /*background-color: #3882cd;*/
     display: flex;
     flex-direction: column;
 }
@@ -402,7 +411,7 @@ td {
     grid-column-end: 3;
     grid-row-start: 2;
     grid-row-end: 3;
-    background-color: #698bcd;
+    /*background-color: #698bcd;*/
 }
 
 #feat2-success {
@@ -410,7 +419,7 @@ td {
     grid-column-end: 3;
     grid-row-start: 3;
     grid-row-end: 4;
-    background-color: #4f2bcd;
+    /*background-color: #4f2bcd;*/
 }
 
 /*---------------------- PARALLEL COORDINATES ----------------------*/
