--- a/css/style.css
+++ b/css/style.css
@@ -332,7 +332,7 @@ label > span {
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #66ccff;
+    background-color: #1f78b4;
     /*color: white;*/
 }
 
