--- a/css/style.css
+++ b/css/style.css
@@ -35,7 +35,29 @@ article .activeTab {
 }
 
 #tab-home {
-    /*background-color: gray;*/
+    grid-template-rows: 15% auto;
+}
+
+#home-title{
+    grid-row-start: 1;
+    grid-row-end: 2;
+    /*background-color: #ff99cc;*/
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+#graph-repulsion{
+    grid-row-start: 2;
+    grid-row-end: 3;
+}
+
+#info-home {
+    position: absolute;
+    height: 50px;
+    bottom: 50px;
+    left: 5px;
 }
 
 /*WAVE*/
