Made the title look bigger

--- a/css/style.css
+++ b/css/style.css
@@ -46,6 +46,7 @@ article .activeTab {
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    font-size: 24px;
 }
 
 #graph-repulsion {
